--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,8 +1,9 @@
 name: Build and Push to Docker Hub
 on:
-  push:
-    branches:
-      - master
+    workflow_dispatch:
+#   push:
+#     branches:
+#       - master
 
 jobs:
   build:
