--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,48 +34,95 @@ jobs:
       - name: Verify AWS credentials
         run: aws sts get-caller-identity
 
-      - name: Test SSM access
-        run: aws ssm describe-document --name AWS-RunShellScript
-        
-      - name: Deploy to EC2 via Systems Manager
+      # - name: Test SSM access
+      #   run: aws ssm describe-document --name AWS-RunShellScript
+
+      - name: Ensure Docker installed and deploy via Systems Manager
         run: |
-          aws ssm send-command \
-            --instance-ids ${{ steps.get-instance.outputs.instance_id }} \
+          ID=${{ steps.get-instance.outputs.instance_id }}
+          echo "Instance: $ID"
+
+          cat > install-commands.json <<'JSON'
+          { "commands": [
+            "#!/bin/bash -xe",
+            "set -o pipefail",
+            "if command -v docker >/dev/null 2>&1; then",
+            "  echo docker already installed",
+            "  exit 0",
+            "fi",
+            "if [ -f /etc/os-release ]; then . /etc/os-release; fi",
+            "if echo \"$NAME\" | grep -qi 'amazon linux'; then",
+            "  if command -v amazon-linux-extras >/dev/null 2>&1; then",
+            "    sudo amazon-linux-extras install -y docker || true",
+            "    sudo yum install -y docker || true",
+            "    sudo systemctl enable docker || true",
+            "    sudo systemctl start docker || sudo service docker start || true",
+            "  else",
+            "    sudo yum install -y docker",
+            "    sudo chkconfig docker on || true",
+            "    sudo service docker start",
+            "  fi",
+            "elif command -v yum >/dev/null 2>&1; then",
+            "  sudo yum install -y docker",
+            "  sudo systemctl enable docker || true",
+            "  sudo systemctl start docker || sudo service docker start || true",
+            "elif command -v apt-get >/dev/null 2>&1; then",
+            "  sudo apt-get update -y",
+            "  sudo apt-get install -y docker.io",
+            "  sudo systemctl enable --now docker || sudo service docker start || true",
+            "else",
+            "  echo 'Unsupported distro; please install docker manually' >&2",
+            "  exit 1",
+            "fi",
+            "sleep 3",
+            "sudo docker version"
+          ] }
+          JSON
+
+          echo "Sending Docker install command..."
+          INSTALL_CMD_ID=$(aws ssm send-command \
+            --instance-ids "$ID" \
             --document-name "AWS-RunShellScript" \
-            --parameters 'commands=[
-              "cd ${{ secrets.EC2_DEPLOY_PATH }}",
-              "docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}",
-              "docker pull ${{ secrets.DOCKER_USERNAME }}/react-app:latest",
-              "docker stop react-app || true",
-              "docker rm react-app || true",
-              "docker run -d --name react-app -p 80:80 ${{ secrets.DOCKER_USERNAME }}/react-app:latest",
-              "docker logs react-app"
-            ]' \
-            --output text
-      
-      - name: Wait for command to complete
-        run: |
-          COMMAND_ID=$(aws ssm list-commands \
-            --filters "key=DocumentName,value=AWS-RunShellScript" \
-            --query 'Commands[0].CommandId' \
-            --output text)
-          
-          for i in {1..30}; do
-            STATUS=$(aws ssm get-command-invocation \
-              --command-id $COMMAND_ID \
-              --instance-id ${{ steps.get-instance.outputs.instance_id }} \
-              --query 'Status' \
-              --output text)
-            
-            if [ "$STATUS" = "Success" ]; then
-              echo "Deployment successful"
-              exit 0
-            elif [ "$STATUS" = "Failed" ]; then
-              echo "Deployment failed"
-              exit 1
-            fi
-            
-            sleep 2
-          done
-          echo "Deployment timeout"
-          exit 1
+            --parameters file://install-commands.json \
+            --query "Command.CommandId" --output text)
+          echo "Install Command ID: $INSTALL_CMD_ID"
+
+          echo "Waiting for install command to finish..."
+          aws ssm wait command-executed --command-id "$INSTALL_CMD_ID" --instance-id "$ID"
+
+          echo "Install result:"
+          aws ssm get-command-invocation --command-id "$INSTALL_CMD_ID" --instance-id "$ID" --output text
+
+          # prepare deploy commands (use sudo to avoid docker group issues)
+          DEPLOY_PATH="${{ secrets.EC2_DEPLOY_PATH }}"
+          DOCKER_USER="${{ secrets.DOCKER_USERNAME }}"
+          DOCKER_PASS="${{ secrets.DOCKER_PASSWORD }}"
+
+          cat > deploy-commands.json <<'JSON'
+          { "commands": [
+            "#!/bin/bash -xe",
+            "set -o pipefail",
+            "cd '"$DEPLOY_PATH"' || true",
+            "echo Logging into Docker Hub...",
+            "echo '"$DOCKER_PASS"' | sudo docker login -u '"$DOCKER_USER"' --password-stdin",
+            "sudo docker pull '"$DOCKER_USER"'/react-app:latest",
+            "sudo docker stop react-app || true",
+            "sudo docker rm react-app || true",
+            "sudo docker run -d --name react-app -p 80:80 '"$DOCKER_USER"'/react-app:latest || true",
+            "sudo docker logs react-app || true"
+          ] }
+          JSON
+
+          echo "Sending deploy command..."
+          DEPLOY_CMD_ID=$(aws ssm send-command \
+            --instance-ids "$ID" \
+            --document-name "AWS-RunShellScript" \
+            --parameters file://deploy-commands.json \
+            --query "Command.CommandId" --output text)
+          echo "Deploy Command ID: $DEPLOY_CMD_ID"
+
+          echo "Waiting for deploy command to finish..."
+          aws ssm wait command-executed --command-id "$DEPLOY_CMD_ID" --instance-id "$ID"
+
+          echo "Deploy result:"
+          aws ssm get-command-invocation --command-id "$DEPLOY_CMD_ID" --instance-id "$ID" --output text
