--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,9 +1,6 @@
 name: Deploy to AWS EC2
 on:
   workflow_dispatch:
-  # push:
-  #   branches:
-  #     - master
 
 permissions:
   id-token: write
@@ -34,95 +31,224 @@ jobs:
       - name: Verify AWS credentials
         run: aws sts get-caller-identity
 
-      # - name: Test SSM access
-      #   run: aws ssm describe-document --name AWS-RunShellScript
-
-      - name: Ensure Docker installed and deploy via Systems Manager
+      - name: Check and Install Docker
         run: |
           ID=${{ steps.get-instance.outputs.instance_id }}
-          echo "Instance: $ID"
+          echo "Checking Docker installation on instance: $ID"
 
-          cat > install-commands.json <<'JSON'
+          cat > check-docker.json <<'JSON'
           { "commands": [
             "#!/bin/bash -xe",
             "set -o pipefail",
             "if command -v docker >/dev/null 2>&1; then",
-            "  echo docker already installed",
+            "  echo 'Docker is already installed'",
+            "  docker version",
             "  exit 0",
             "fi",
+            "echo 'Docker not found, installing...'",
             "if [ -f /etc/os-release ]; then . /etc/os-release; fi",
             "if echo \"$NAME\" | grep -qi 'amazon linux'; then",
             "  if command -v amazon-linux-extras >/dev/null 2>&1; then",
-            "    sudo amazon-linux-extras install -y docker || true",
-            "    sudo yum install -y docker || true",
-            "    sudo systemctl enable docker || true",
-            "    sudo systemctl start docker || sudo service docker start || true",
+            "    echo 'Installing Docker via amazon-linux-extras (AL2)'",
+            "    sudo amazon-linux-extras install -y docker",
+            "    sudo systemctl enable docker",
+            "    sudo systemctl start docker",
             "  else",
+            "    echo 'Installing Docker via yum (AL1)'",
             "    sudo yum install -y docker",
-            "    sudo chkconfig docker on || true",
+            "    sudo chkconfig docker on",
             "    sudo service docker start",
             "  fi",
             "elif command -v yum >/dev/null 2>&1; then",
+            "  echo 'Installing Docker via yum'",
             "  sudo yum install -y docker",
-            "  sudo systemctl enable docker || true",
-            "  sudo systemctl start docker || sudo service docker start || true",
+            "  sudo systemctl enable docker",
+            "  sudo systemctl start docker",
             "elif command -v apt-get >/dev/null 2>&1; then",
+            "  echo 'Installing Docker via apt-get'",
             "  sudo apt-get update -y",
             "  sudo apt-get install -y docker.io",
-            "  sudo systemctl enable --now docker || sudo service docker start || true",
+            "  sudo systemctl enable --now docker",
             "else",
-            "  echo 'Unsupported distro; please install docker manually' >&2",
+            "  echo 'ERROR: Unsupported distro' >&2",
             "  exit 1",
             "fi",
-            "sleep 3",
-            "sudo docker version"
+            "sleep 2",
+            "sudo docker version",
+            "echo 'Docker installation completed successfully'"
           ] }
           JSON
 
-          echo "Sending Docker install command..."
-          INSTALL_CMD_ID=$(aws ssm send-command \
+          DOCKER_CMD_ID=$(aws ssm send-command \
             --instance-ids "$ID" \
             --document-name "AWS-RunShellScript" \
-            --parameters file://install-commands.json \
+            --parameters file://check-docker.json \
             --query "Command.CommandId" --output text)
-          echo "Install Command ID: $INSTALL_CMD_ID"
+          echo "Docker check/install Command ID: $DOCKER_CMD_ID"
 
-          echo "Waiting for install command to finish..."
-          aws ssm wait command-executed --command-id "$INSTALL_CMD_ID" --instance-id "$ID"
+          aws ssm wait command-executed --command-id "$DOCKER_CMD_ID" --instance-id "$ID"
+          
+          DOCKER_STATUS=$(aws ssm get-command-invocation \
+            --command-id "$DOCKER_CMD_ID" \
+            --instance-id "$ID" \
+            --query 'Status' \
+            --output text)
+          
+          echo "Docker command status: $DOCKER_STATUS"
+          aws ssm get-command-invocation --command-id "$DOCKER_CMD_ID" --instance-id "$ID" --output text
+          
+          if [ "$DOCKER_STATUS" != "Success" ]; then
+            echo "ERROR: Docker installation/check failed"
+            exit 1
+          fi
 
-          echo "Install result:"
-          aws ssm get-command-invocation --command-id "$INSTALL_CMD_ID" --instance-id "$ID" --output text
-
-          # prepare deploy commands (use sudo to avoid docker group issues)
-          DEPLOY_PATH="${{ secrets.EC2_DEPLOY_PATH }}"
+      - name: Pull Docker Image from Docker Hub
+        run: |
+          ID=${{ steps.get-instance.outputs.instance_id }}
           DOCKER_USER="${{ secrets.DOCKER_USERNAME }}"
-          DOCKER_PASS="${{ secrets.DOCKER_PASSWORD }}"
+          DEPLOY_PATH="${{ secrets.EC2_DEPLOY_PATH }}"
 
-          cat > deploy-commands.json <<'JSON'
+          echo "Pulling Docker image: $DOCKER_USER/react-app:latest"
+
+          cat > pull-image.json <<'JSON'
           { "commands": [
             "#!/bin/bash -xe",
             "set -o pipefail",
-            "cd '"$DEPLOY_PATH"' || true",
-            "echo Logging into Docker Hub...",
-            "echo '"$DOCKER_PASS"' | sudo docker login -u '"$DOCKER_USER"' --password-stdin",
+            "cd '"$DEPLOY_PATH"' || { echo 'ERROR: Deploy path not found' >&2; exit 1; }",
+            "echo 'Pulling Docker image...'",
             "sudo docker pull '"$DOCKER_USER"'/react-app:latest",
-            "sudo docker stop react-app || true",
-            "sudo docker rm react-app || true",
-            "sudo docker run -d --name react-app -p 80:80 '"$DOCKER_USER"'/react-app:latest || true",
-            "sudo docker logs react-app || true"
+            "echo 'Image pulled successfully'",
+            "sudo docker images | grep react-app"
           ] }
           JSON
 
-          echo "Sending deploy command..."
+          PULL_CMD_ID=$(aws ssm send-command \
+            --instance-ids "$ID" \
+            --document-name "AWS-RunShellScript" \
+            --parameters file://pull-image.json \
+            --query "Command.CommandId" --output text)
+          echo "Pull image Command ID: $PULL_CMD_ID"
+
+          aws ssm wait command-executed --command-id "$PULL_CMD_ID" --instance-id "$ID"
+          
+          PULL_STATUS=$(aws ssm get-command-invocation \
+            --command-id "$PULL_CMD_ID" \
+            --instance-id "$ID" \
+            --query 'Status' \
+            --output text)
+          
+          echo "Pull image command status: $PULL_STATUS"
+          aws ssm get-command-invocation --command-id "$PULL_CMD_ID" --instance-id "$ID" --output text
+          
+          if [ "$PULL_STATUS" != "Success" ]; then
+            echo "ERROR: Docker image pull failed"
+            exit 1
+          fi
+
+      - name: Deploy Application Container
+        run: |
+          ID=${{ steps.get-instance.outputs.instance_id }}
+          DOCKER_USER="${{ secrets.DOCKER_USERNAME }}"
+          DEPLOY_PATH="${{ secrets.EC2_DEPLOY_PATH }}"
+
+          echo "Deploying application container"
+
+          cat > deploy-app.json <<'JSON'
+          { "commands": [
+            "#!/bin/bash -xe",
+            "set -o pipefail",
+            "cd '"$DEPLOY_PATH"' || exit 1",
+            "echo 'Stopping existing container...'",
+            "sudo docker stop react-app || true",
+            "sudo docker rm react-app || true",
+            "echo 'Starting new container...'",
+            "sudo docker run -d --name react-app -p 80:80 '"$DOCKER_USER"'/react-app:latest",
+            "sleep 2",
+            "echo 'Container started, checking status...'",
+            "sudo docker ps | grep react-app",
+            "echo 'Application deployed successfully'"
+          ] }
+          JSON
+
           DEPLOY_CMD_ID=$(aws ssm send-command \
             --instance-ids "$ID" \
             --document-name "AWS-RunShellScript" \
-            --parameters file://deploy-commands.json \
+            --parameters file://deploy-app.json \
             --query "Command.CommandId" --output text)
-          echo "Deploy Command ID: $DEPLOY_CMD_ID"
+          echo "Deploy app Command ID: $DEPLOY_CMD_ID"
 
-          echo "Waiting for deploy command to finish..."
           aws ssm wait command-executed --command-id "$DEPLOY_CMD_ID" --instance-id "$ID"
-
-          echo "Deploy result:"
+          
+          DEPLOY_STATUS=$(aws ssm get-command-invocation \
+            --command-id "$DEPLOY_CMD_ID" \
+            --instance-id "$ID" \
+            --query 'Status' \
+            --output text)
+          
+          echo "Deploy command status: $DEPLOY_STATUS"
           aws ssm get-command-invocation --command-id "$DEPLOY_CMD_ID" --instance-id "$ID" --output text
+          
+          if [ "$DEPLOY_STATUS" != "Success" ]; then
+            echo "ERROR: Application deployment failed"
+            exit 1
+          fi
+
+      - name: Sanity Check - Verify App is Running
+        run: |
+          ID=${{ steps.get-instance.outputs.instance_id }}
+
+          echo "Running sanity checks on deployed application"
+
+          cat > sanity-check.json <<'JSON'
+          { "commands": [
+            "#!/bin/bash -xe",
+            "set -o pipefail",
+            "echo 'Checking if container is running...'",
+            "sudo docker ps | grep react-app || { echo 'ERROR: Container not running' >&2; exit 1; }",
+            "echo 'Container is running'",
+            "echo 'Checking container logs for errors...'",
+            "sudo docker logs react-app | tail -20",
+            "echo 'Attempting HTTP health check...'",
+            "max_attempts=10",
+            "attempt=1",
+            "while [ $attempt -le $max_attempts ]; do",
+            "  echo \"Health check attempt $attempt/$max_attempts\"",
+            "  http_code=$(curl -s -o /dev/null -w '%{http_code}' http://localhost:80/ || echo '000')",
+            "  if [ \"$http_code\" = \"200\" ]; then",
+            "    echo \"SUCCESS: Application returned HTTP $http_code\"",
+            "    exit 0",
+            "  else",
+            "    echo \"Got HTTP $http_code, retrying in 2 seconds...\"",
+            "    sleep 2",
+            "    attempt=$((attempt + 1))",
+            "  fi",
+            "done",
+            "echo 'ERROR: Application did not return HTTP 200 after retries' >&2",
+            "exit 1"
+          ] }
+          JSON
+
+          SANITY_CMD_ID=$(aws ssm send-command \
+            --instance-ids "$ID" \
+            --document-name "AWS-RunShellScript" \
+            --parameters file://sanity-check.json \
+            --query "Command.CommandId" --output text)
+          echo "Sanity check Command ID: $SANITY_CMD_ID"
+
+          aws ssm wait command-executed --command-id "$SANITY_CMD_ID" --instance-id "$ID"
+          
+          SANITY_STATUS=$(aws ssm get-command-invocation \
+            --command-id "$SANITY_CMD_ID" \
+            --instance-id "$ID" \
+            --query 'Status' \
+            --output text)
+          
+          echo "Sanity check status: $SANITY_STATUS"
+          aws ssm get-command-invocation --command-id "$SANITY_CMD_ID" --instance-id "$ID" --output text
+          
+          if [ "$SANITY_STATUS" != "Success" ]; then
+            echo "ERROR: Sanity check failed - application not responding with HTTP 200"
+            exit 1
+          fi
+          
+          echo "✓ All sanity checks passed - application is running and healthy"
